force-app/main/default/objects/Special_Price_Request__c/Special_Price_Request__c.object-meta.xml
<CustomObject>
    <description>Request for TPD, MSP, PPP that needs approvals</description>
    <label>Special Price Request</label>
    <nameField>
        <displayFormat>SPR-{000000}</displayFormat>
        <label>Special Price Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Price Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>