force-app/main/default/objects/Special_Price_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Opportunity Account if there is Opportunity</description>
    <inlineHelpText>Opportunity Account if there is Opportunity</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Special Price Requests</relationshipLabel>
    <relationshipName>Project_Price_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>