force-app/main/default/objects/Special_Price_Request__c/fields/Approved_By_CEO__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_CEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By CEO</label>
    <type>Checkbox</type>
</CustomField>