force-app/main/default/objects/Special_Price_Request__c/fields/Approved_By_Head_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Head_of_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Head of Sales</label>
    <type>Checkbox</type>
</CustomField>