force-app/main/default/objects/Special_Price_Request__c/fields/Approved_By_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Team_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Team Leader</label>
    <type>Checkbox</type>
</CustomField>