force-app/main/default/objects/Special_Price_Request__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Alias</field>
            <operation>equals</operation>
            <value>tsei</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Price_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>