force-app/main/default/objects/Special_Price_Request__c/fields/Comment_by_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Comment_by_Requestor__c</fullName>
    <label>Comment by Requestor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>