force-app/main/default/objects/Special_Price_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact to whom the Quotation should be prepared. Added as Contact Role in the Quotation.</description>
    <inlineHelpText>Contact to whom the Quotation should be prepared. Added as Contact Role in the Quotation.</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Special Price Requests</relationshipLabel>
    <relationshipName>Special_Price_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>