force-app/main/default/objects/Special_Price_Request__c/fields/Date_Approved_By_CEO__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_By_CEO__c</fullName>
    <label>Date Approved By CEO</label>
    <type>DateTime</type>
</CustomField>