force-app/main/default/objects/Special_Price_Request__c/fields/Date_Approved_By_Head_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_By_Head_of_Sales__c</fullName>
    <label>Date Approved By Head of Sales</label>
    <type>DateTime</type>
</CustomField>