force-app/main/default/objects/Special_Price_Request__c/fields/Date_Approved_By_Regional_Head__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_By_Regional_Head__c</fullName>
    <description>Date when the last approval by Regional Head has been made</description>
    <inlineHelpText>Date when the last approval by Regional Head has been made</inlineHelpText>
    <label>Date Approved By Regional Head</label>
    <type>DateTime</type>
</CustomField>