force-app/main/default/objects/Special_Price_Request__c/fields/Date_Approved_By_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_By_Team_Leader__c</fullName>
    <description>Date when the last approval by Team Leader has been made</description>
    <inlineHelpText>Date when the last approval by Team Leader has been made</inlineHelpText>
    <label>Date Approved By Team Leader</label>
    <type>DateTime</type>
</CustomField>