force-app/main/default/objects/Special_Price_Request__c/fields/Date_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected__c</fullName>
    <description>Date when the request has been rejected last time</description>
    <inlineHelpText>Date when the request has been rejected last time</inlineHelpText>
    <label>Date Rejected</label>
    <type>DateTime</type>
</CustomField>