force-app/main/default/objects/Special_Price_Request__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Date when the request has been submitted for the first time</description>
    <inlineHelpText>Date when the request has been submitted for the first time</inlineHelpText>
    <label>Date Submitted</label>
    <type>DateTime</type>
</CustomField>