force-app/main/default/objects/Special_Price_Request__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <inlineHelpText>Imported to Quotation (with New Quotation button)</inlineHelpText>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCA Flextronics Althofen (AT)</fullName>
            </value>
            <value>
                <fullName>FCA Amkor ATP3 Binan (PH)</fullName>
            </value>
            <value>
                <fullName>FCA Thalwil (CH)</fullName>
            </value>
            <value>
                <fullName>FCA Reston (USA)</fullName>
            </value>
            <value>
                <fullName>EXW Reston (USA)</fullName>
            </value>
            <value>
                <fullName>DAP + add Place and Country manually, e.g. Shenzhen (CN)</fullName>
            </value>
            <value>
                <fullName>DDP + add Place and Country manually, e.g. Shenzhen (CN)</fullName>
            </value>
            <value>
                <fullName>EXW Althofen, Austria (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>EXW Thalwil, Switzerland (Incoterms 2000) for samples, EXW Althofen, Austria (Incoterms 2000) for complete packing units</fullName>
            </value>
            <value>
                <fullName>EXW Biñan, Philippines (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>EXW Thalwil, Switzerland (Incoterms 2000) for samples, EXW Biñan, Philippines (Incoterms 2000) for complete packing units</fullName>
            </value>
            <value>
                <fullName>EXW Thalwil, Switzerland (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>EXW Reston VA, Unites States (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>DDU</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>