force-app/main/default/objects/Special_Price_Request__c/fields/Email_PS_CEL__c.field-meta.xml
<CustomField>
    <fullName>Email_PS_CEL__c</fullName>
    <description>Added for PPP final approval notification. Updated with Workflow using Roll-up Summary.</description>
    <label>Email PS CEL</label>
    <type>Email</type>
</CustomField>