force-app/main/default/objects/Special_Price_Request__c/fields/Escalate_To_CEO__c.field-meta.xml
<CustomField>
    <fullName>Escalate_To_CEO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick before Approve so that it is escalated to CEO</inlineHelpText>
    <label>Escalate To CEO</label>
    <type>Checkbox</type>
</CustomField>