force-app/main/default/objects/Special_Price_Request__c/fields/Escalate_To_Regional_Head__c.field-meta.xml
<CustomField>
    <fullName>Escalate_To_Regional_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick before Approve so that it is escalated to Regional Head</inlineHelpText>
    <label>Escalate To Regional Head</label>
    <type>Checkbox</type>
</CustomField>