force-app/main/default/objects/Special_Price_Request__c/fields/Final_Approval_By_Regional_Head__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_By_Regional_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is ticked, the request will not be escalated further to CEO.</inlineHelpText>
    <label>Final Approval By Regional Head</label>
    <type>Checkbox</type>
</CustomField>