force-app/main/default/objects/Special_Price_Request__c/fields/Final_Approval_By_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_By_Team_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is ticked, the request will not be escalated further to Regional Head and CEO.</inlineHelpText>
    <label>Final Approval By Team Manager</label>
    <type>Checkbox</type>
</CustomField>