force-app/main/default/objects/Special_Price_Request__c/fields/Head_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Special_Price_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>