force-app/main/default/objects/Special_Price_Request__c/fields/Head_of_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Sales_Email__c</fullName>
    <description>Filled through approval processes</description>
    <inlineHelpText>Filled after Head of Sales has approved</inlineHelpText>
    <label>Head of Sales Email</label>
    <type>Email</type>
</CustomField>