force-app/main/default/objects/Special_Price_Request__c/fields/Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Price_Level__c</fullName>
    <description>Price level
RSP: Price = RSP
TPD: RSP &gt; Price &gt;= TPD
MSP: TPD &gt; Price &gt;= MSP
PPP: MSP &gt; Price</description>
    <inlineHelpText>Price level
RSP: Price = RSP
TPD: RSP &gt; Price &gt;= TPD
MSP: TPD &gt; Price &gt;= MSP
PPP: MSP &gt; Price
NOTE: No Approval Process required for TPD</inlineHelpText>
    <label>Price Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPP (Project Price Plan)</fullName>
            </value>
            <value>
                <fullName>MSP (Minimum Sales Price)</fullName>
            </value>
            <value>
                <fullName>TPD (Transfer Price for Distributor)</fullName>
            </value>
            <value>
                <fullName>RSP (Recommended Sales Price)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>