force-app/main/default/objects/Special_Price_Request__c/fields/Prices_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Prices_Valid_Until__c</fullName>
    <description>If it is empty, it will be Date Approved By CEO + 120 days</description>
    <inlineHelpText>If it is empty, it will be Date Approved By CEO + 120 days</inlineHelpText>
    <label>Prices Valid Until</label>
    <type>Date</type>
</CustomField>