force-app/main/default/objects/Special_Price_Request__c/fields/Prices_Valid_Until_Previous__c.field-meta.xml
<CustomField>
    <fullName>Prices_Valid_Until_Previous__c</fullName>
    <description>Date previously filled, to be used if Prices Valid Until is added</description>
    <inlineHelpText>Date previously filled, to be used if Prices Valid Until is added</inlineHelpText>
    <label>Prices Valid Until Previous</label>
    <type>Date</type>
</CustomField>