force-app/main/default/objects/Special_Price_Request__c/fields/Quotation_Account__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Account__c</fullName>
    <description>Automatically populated with Contact Account. If no Contact, the same as Account (Opportunity Account if there is Opportunity).</description>
    <formula>IF(ISBLANK(Contact__c), Account__r.Name , Contact__r.Account.Name )</formula>
    <inlineHelpText>Automatically populated with Contact Account. If no Contact, the same as Account (Opportunity Account if there is Opportunity).</inlineHelpText>
    <label>Quotation Account</label>
    <type>Text</type>
</CustomField>