force-app/main/default/objects/Special_Price_Request__c/fields/Quotation_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Account_ID__c</fullName>
    <description>Used to generate Quotation</description>
    <formula>IF(ISBLANK(Contact__c),Account__r.Id,Contact__r.AccountId)</formula>
    <inlineHelpText>Used to generate Quotation</inlineHelpText>
    <label>Quotation Account ID</label>
    <type>Text</type>
</CustomField>