force-app/main/default/objects/Special_Price_Request__c/fields/Quotation_Account_Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Account_Sales_Admin__c</fullName>
    <description>Used to assign Task created with &quot;Request Quotation&quot; button.</description>
    <formula>IF(ISBLANK(Contact__c),  Account__r.Sales_Admin__r.FirstName&amp;&quot; &quot;&amp; Account__r.Sales_Admin__r.LastName, Contact__r.Account.Sales_Admin__r.FirstName&amp;&quot; &quot;&amp; Contact__r.Account.Sales_Admin__r.LastName)</formula>
    <inlineHelpText>Used to assign Task created with &quot;Request Quotation&quot; button.</inlineHelpText>
    <label>Quotation Account Sales Admin</label>
    <type>Text</type>
</CustomField>