force-app/main/default/objects/Special_Price_Request__c/fields/Regional_Head__c.field-meta.xml
<CustomField>
    <fullName>Regional_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Price_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>