force-app/main/default/objects/Special_Price_Request__c/fields/Regional_Head_Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Regional_Head_Assignee_Email__c</fullName>
    <description>Email of the acutal regional head who is supposed to approve/reject</description>
    <inlineHelpText>Email of the acutal regional head who is supposed to approve/reject</inlineHelpText>
    <label>Regional Head (Assignee) Email</label>
    <type>Email</type>
</CustomField>