force-app/main/default/objects/Special_Price_Request__c/fields/Regional_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Regional_Head_Email__c</fullName>
    <inlineHelpText>Filled after Regional Head has approved</inlineHelpText>
    <label>Regional Head Email</label>
    <type>Email</type>
</CustomField>