force-app/main/default/objects/Special_Price_Request__c/fields/Team_Leader_Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Assignee_Email__c</fullName>
    <label>Team Leader (Assignee) Email</label>
    <type>Email</type>
</CustomField>