force-app/main/default/objects/Special_Price_Request__c/fields/Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Price_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>