force-app/main/default/objects/Special_Price_Request__c/fields/Team_Manager_Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager_Assignee_Email__c</fullName>
    <description>Email of the acutal team manager who is supposed to approve/reject</description>
    <inlineHelpText>Email of the acutal team manager who is supposed to approve/reject</inlineHelpText>
    <label>Team Manager (Assignee) Email</label>
    <type>Email</type>
</CustomField>