force-app/main/default/objects/Special_Price_Request__c/fields/Team_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager_Email__c</fullName>
    <inlineHelpText>Filled after Team Manager has approved</inlineHelpText>
    <label>Team Manager Email</label>
    <type>Email</type>
</CustomField>