force-app/main/default/objects/Special_Price_Request__c/fields/Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution__c</fullName>
    <formula>Total_Contribution_P1__c+Total_Contribution_P2__c+Total_Contribution_P3__c+Total_Contribution_P4__c+Total_Contribution_P5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Total Contribution P1+P2+P3+P4+P5</inlineHelpText>
    <label>Total Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>