force-app/main/default/objects/Special_Price_Request__c/fields/Total_Contribution_Initial__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_Initial__c</fullName>
    <description>Initial Total Contribution when the request has been submitted</description>
    <inlineHelpText>Initial Total Contribution when the request has been submitted</inlineHelpText>
    <label>Total Contribution Initial</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>