force-app/main/default/objects/Special_Price_Request__c/fields/Total_Contribution_P1_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_P1_Pct__c</fullName>
    <formula>if(Total_Revenue_P1__c=0,0,Total_Contribution_P1__c/Total_Revenue_P1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Contribution P1 in percent</inlineHelpText>
    <label>Total Contribution P1 Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>