force-app/main/default/objects/Special_Price_Request__c/fields/Total_Contribution_P3_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_P3_Pct__c</fullName>
    <formula>if(Total_Revenue_P3__c=0,0,Total_Contribution_P3__c/Total_Revenue_P3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Contribution P3 in percent</inlineHelpText>
    <label>Total Contribution P3 Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>