force-app/main/default/objects/Special_Price_Request__c/fields/Total_Contribution_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_Pct__c</fullName>
    <formula>if(Total_Revenue__c=0,0,Total_Contribution__c/Total_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Contribution in percent</inlineHelpText>
    <label>Total Contribution Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>