force-app/main/default/objects/Special_Price_Request__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <formula>Total_Quantity_P1__c+Total_Quantity_P2__c+Total_Quantity_P3__c+Total_Quantity_P4__c+Total_Quantity_P5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Total Quantity P1+P2+P3+P4+P5</inlineHelpText>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>