force-app/main/default/objects/Special_Price_Request__c/fields/Total_Quantity_CEL__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_CEL__c</fullName>
    <description>Made to add Email PS CEL</description>
    <label>Total Quantity CEL</label>
    <summarizedField>Special_Price_Request_Product__c.Quantity_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Special_Price_Request_Product__c.Product_Center_picklist__c</field>
        <operation>equals</operation>
        <value>Cellular</value>
    </summaryFilterItems>
    <summaryForeignKey>Special_Price_Request_Product__c.Special_Price_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>