force-app/main/default/objects/Special_Price_Request__c/fields/Total_Quantity_Initial__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Initial__c</fullName>
    <inlineHelpText>Initial Total Quantity when the request has been submitted</inlineHelpText>
    <label>Total Quantity Initial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>