force-app/main/default/objects/Special_Price_Request__c/fields/Total_Quantity_P2__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_P2__c</fullName>
    <inlineHelpText>Sum of Quantity P2 of all added Special Price Request Products</inlineHelpText>
    <label>Total Quantity P2</label>
    <summarizedField>Special_Price_Request_Product__c.Quantity_P2__c</summarizedField>
    <summaryForeignKey>Special_Price_Request_Product__c.Special_Price_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>