force-app/main/default/objects/Special_Price_Request__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>Total_Revenue_P1__c+Total_Revenue_P2__c+Total_Revenue_P3__c+Total_Revenue_P4__c+Total_Revenue_P5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Total Revenue P1+P2+P3+P4+P5</inlineHelpText>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>