force-app/main/default/objects/Special_Price_Request__c/fields/Total_Revenue_P1__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_P1__c</fullName>
    <inlineHelpText>Sum of Revenue P1 of all added Special Price Request Products</inlineHelpText>
    <label>Total Revenue P1</label>
    <summarizedField>Special_Price_Request_Product__c.Revenue_P1__c</summarizedField>
    <summaryForeignKey>Special_Price_Request_Product__c.Special_Price_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>